# truth-table-generator

./: CMakeLists.txt  main.cpp
Boolean/: Constant.h  Expression.h  ExpressionParser.h  Formula.h  Operator.h  Variable.h
UI/: TruthTableGenerator.cpp  TruthTableGenerator.h
